<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:ignore="NamespaceTypo"
    android:background="#737373">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/kings_sacrifice"
        android:titleTextColor="@color/white"
        android:background="#171717"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/new_game"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="60dp"
            card_view:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            card_view:cardBackgroundColor="#DADADA"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/new_game"
                android:textSize="25sp"
                android:gravity="center"
                />



        </androidx.cardview.widget.CardView>




        <androidx.cardview.widget.CardView
            android:id="@+id/blitz"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="60dp"
            card_view:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            card_view:cardBackgroundColor="#DADADA">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/blitz"
                android:textSize="25sp"
                android:gravity="center"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/rapid"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="60dp"
            card_view:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            card_view:cardBackgroundColor="#DADADA">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rapid"
                android:textSize="25sp"
                android:gravity="center"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/overTheBoard"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="60dp"
            card_view:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            card_view:cardBackgroundColor="#DADADA">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/otb"
                android:textSize="25sp"
                android:gravity="center"
                />

        </androidx.cardview.widget.CardView>


    </LinearLayout>




    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:background="#171717"
        app:menu="@menu/bottom_navigation_menu"
        card_view:itemIconTint="@color/white"
        card_view:itemTextColor="@color/white" />

</LinearLayout>